# shorturl

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  quality.yml
shorturl/: main.py
tests/: test_shorturl.py  todo.md
