[tool.poetry]
name = "shorturl"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>"]
repository = "https://github.com/kazyamov/shorturl"
packages = [ { include = 'shorturl' }, ]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
