[tool.poetry]
name = "kaziamov-shorturl"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
repository = "https://github.com/kaziamov/shorturl"
packages = [ { include = 'shorturl' }, ]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shorturl = 'shorturl.main:main'
